<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/llyellow"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/aimg1"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="170dp"
                android:src="@drawable/about_one"
                android:contentDescription="ab1"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/aimg2"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp"
                android:src="@drawable/about_two"
                android:layout_gravity="bottom"
                android:contentDescription="ab2"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="320dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/aimg3"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/ab3"
                android:layout_height="120dp"
                android:src="@drawable/about_three"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/aimg4"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/ab4"
                android:layout_height="170dp"
                android:src="@drawable/about_four"
                android:scaleType="centerCrop"/>



        </LinearLayout>
        <TextView
            android:text="@string/aboutTxt"
            android:textSize="20sp"
            android:padding="22dp"
            android:textAlignment="textStart"
            style="@style/cardBtext"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:padding="10dp">
            <View
                android:layout_width="8dp"
                android:layout_height="80dp"
                android:background="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:padding="5dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                />
            <TextView
                android:text="@string/years_experience"
                android:layout_marginEnd="39dp"
                style="@style/cardBtext"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:padding="10dp">
            <View
                android:layout_width="8dp"
                android:layout_marginStart="10dp"
                android:layout_height="80dp"
                android:background="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50"
                android:padding="5dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                />
            <TextView
                android:text="Popular Master Chefs"
                style="@style/cardBtext"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>