<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FAF7FF"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="?attr/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/toggle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight=".5"
                    android:src="@drawable/baseline_menu_24"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="Restoran"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:src="@drawable/back_bg"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enjoy our delicious meal"
                    android:textSize="28dp"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:textAllCaps="true"/>

                <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
                <ImageView
                    android:id="@+id/ivhero"
                    android:layout_width="120dp"
                    android:layout_margin="20dp"
                    android:layout_height="120dp"
                    android:src="@drawable/hero"/>

                <Button
                    android:id="@+id/btable"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_margin="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/baseline_assignment_turned_in_24"
                    android:text="Book a Table" />

            </LinearLayout>



            </FrameLayout>


            <androidx.cardview.widget.CardView
                style="@style/cardStyle">
                <LinearLayout
                    style="@style/cardLayout">
                    <TextView
                        android:text="Master Chef"
                        style="@style/cardHtext"/>
                    <TextView
                        android:text="@string/cheftxt"
                        style="@style/cardBtext"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/cardStyle">
                <LinearLayout
                    style="@style/cardLayout">
                    <TextView
                        android:text="Quality Food"
                        style="@style/cardHtext"/>
                    <TextView
                        android:text="@string/quality_text"
                        style="@style/cardBtext"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/cardStyle">
                <LinearLayout
                    style="@style/cardLayout">
                    <TextView
                        android:text="Online Order"
                        style="@style/cardHtext"/>
                    <TextView
                        android:text="@string/online_order"
                        style="@style/cardBtext"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/cardStyle">
                <LinearLayout
                    style="@style/cardLayout">
                    <TextView
                        android:text="24/7 Service"
                        style="@style/cardHtext"/>
                    <TextView
                        android:text="@string/service"
                        style="@style/cardBtext"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>